--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectName=sonar_test
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources="/sonar-project.properties"
+sonar.sources="sonar-project.properties"
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
